--- a/paginas/hombre.html
+++ b/paginas/hombre.html
@@ -52,3 +52,20 @@
       </div>
     </nav>
   </header>
+  <main>
+    
+    <div class="mx-auto justify-content-center ">
+      <h1 class=" text-center">SNEAKERS DISPONIBLES</h1>
+      <div class="container-fluid d-flex justify-content-center row">
+        <div class="hombre col" ><img src="/imgss/Sale (3).png" class="image " width="300"height="300" alt="..." >
+          <div class="middle">
+              <div class="textshop">SHOP NOW</div>
+          </div>
+        <h4 class=" mx-3">$300</h4>
+        <select class="form-select w-25 mx-3 " aria-label="Default select example">
+          <option selected>Talle</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
