--- a/paginas/hombre.html
+++ b/paginas/hombre.html
@@ -69,3 +69,44 @@
           <option value="3">Three</option>
         </select>
       </div>
+      <div class="hombre col">
+        <img src="/imgss/Sale (4).png" class="image " width="300"height="300" alt="..." >
+        <div class="middle">
+          <div class="textshop">SHOP NOW</div>
+        </div>
+        <h4 class=" mx-3 align-content-center">$300</h4>
+        <select class="form-select w-25 mx-3 " aria-label="Default select example">
+          <option selected>Talle</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+      <div class="hombre col" >
+        <img src="/imgss/Sale (5).png" class="image " width="300"height="300" alt="..." >
+        <div class="middle">
+          <div class="textshop">SHOP NOW</div>
+        </div>
+        <h4 class=" mx-3">$300</h4>
+        <select class="form-select w-25 mx-3  d-flex" aria-label="Default select example">
+          <option selected>Talle</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+      <div class="hombre col" >
+        <img src="/imgss/Sale (6).png" class="image" width="300"height="300" alt="..." >
+        <div class="middle">
+          <div class="textshop">SHOP NOW</div>
+        </div>
+        <h4 class=" mx-3">$300</h4>
+        <select class="form-select w-25 mx-3" aria-label="Default select example">
+          <option selected>Talle</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+    </div>
+    </div>
