--- a/paginas/hombre.html
+++ b/paginas/hombre.html
@@ -26,7 +26,7 @@
               <a class="nav-link " aria-current="page" href="../Index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">nosotros</a>
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="">Hombre</a>
