agrego la seccion principal de la pagina mujeres

--- a/paginas/mujer.html
+++ b/paginas/mujer.html
@@ -53,6 +53,99 @@
     </nav>
   </header>
   <main>
+    <div class="mx-auto justify-content-center">
+      <h1 class=" text-center">SNEAKERS DISPONIBLES</h1>
+      <div class="container-fluid d-flex row">
+      <div class="mujeres col" ><img src="../imgs/nike huarache.png" class=" image" width="300"height="300" alt="...">
+        <div class="middle">
+          <div class="textshop">SHOP NOW</div>
+        </div>
+        <h4 class=" mx-3">$300</h4>
+        <select class="form-select w-25 mx-3" aria-label="Default select example">
+          <option selected>Talle</option>
+          <option value="1">36</option>
+          <option value="2">37</option>
+          <option value="3">38</option>
+          <option value="3">39</option>
+          <option value="3">40</option>
+        </select>
+      </div>
+      <div class="mujeres col">
+        <img src="../imgs/nike air force1 mid woman.png" class=" image" width="300"height="300" alt="...">
+        <div class="middle">
+          <div class="textshop">SHOP NOW</div>
+        </div>
+        <h4 class=" mx-3">$300</h4>
+        <select class="form-select w-25 mx-3" aria-label="Default select example">
+          <option selected>Talle</option>
+          <option value="1">36</option>
+          <option value="2">37</option>
+          <option value="3">38</option>
+          <option value="3">39</option>
+          <option value="3">40</option>
+        </select>
+      </div>
+      <div class="mujeres col">
+        <img src="../imgs/jordan 3 court purple.png" class=" image" width="300"height="300" alt="...">
+        <div class="middle">
+          <div class="textshop">SHOP NOW</div>
+        </div>
+        <h4 class=" mx-3">$300</h4>
+        <select class="form-select w-25 mx-3" aria-label="Default select example">
+          <option selected>Talle</option>
+          <option value="1">36</option>
+          <option value="2">37</option>
+          <option value="3">38</option>
+          <option value="3">39</option>
+          <option value="3">40</option>
+        </select>
+      </div>
+      <div class="mujeres col" >
+        <img src="../imgs/adidas mujerr.png" class=" image " width="300"height="300" alt="...">
+        <div class="middle">
+          <div class="textshop">SHOP NOW</div>
+        </div>
+        <h4 class=" mx-3">$300</h4>
+        <select class="form-select w-25 mx-3" aria-label="Default select example">
+          <option selected>Talle</option>
+          <option value="1">36</option>
+          <option value="2">37</option>
+          <option value="3">38</option>
+          <option value="3">39</option>
+          <option value="3">40</option>
+        </select>
+      </div>
+    </div>
+    </div>
+  
+    <div class=" d-flex justify-content-center">
+      <h1>PROXIMOS INGRESOS</h1>
+  </div>
+   
+    <div class="container-fluid d-flex justify-content-center" >
+      
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <video width="330" height="330"  autoplay loop controls>
+                <source src="../imgs/video.coming soon.mp4">
+            </div>
+            <div class="carousel-item">
+              <video width="330" height="330" autoplay loop controls>
+                <source src="../imgs/videos hombre.mp4">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+    </div>
+  </main>
 
   
  
