--- a/paginas/hombre.html
+++ b/paginas/hombre.html
@@ -12,7 +12,45 @@
     <title>hombre</title>
 </head>
 <body>
- 
+  <header>
+    <nav class="navbar navbar-expand-lg bg-white ">
+      <div class="container">
+        <img src="../imgs/Opikers shop logo 3.png" alt=""
+        <a class="navbar-brand" href="#"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="../Index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="">Hombre</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="mujer.html">Mujer</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ayuda.html">Ayuda</a>
+            </li>
+          </ul>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn" type="submit"><img src="../imgs/simbolo-de-la-interfaz-de-busqueda.png" alt=""></button>
+              </form>
+          <span>
+            <div class="ms-3 ">
+              <img src="../imgs/carrito-de-compras.png" alt="carrito de compras">
+            </div>
+        </span>
+        </div>
+      </div>
+    </nav>
+  </header>
   <main>
     
     
